--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -426,36 +426,37 @@ function animTo(target, duration = 350) {
   }
   
 function computeTransformForPin(id, scale) {
-  const center = getPinCenter(id);
-  if (!center) return null;
+  const c = getPinCenter(id);
+  if (!c) return null;
 
-  const rect = wrapEl.getBoundingClientRect();
-  const viewCx = rect.width / 2;
+  const rect   = wrapEl.getBoundingClientRect();
+  const viewCx = rect.width  / 2;
   const viewCy = rect.height / 2;
 
-  // Mittelpunkt des Pins ins Zentrum holen
-  let x = viewCx - center.cx * scale;
-  let y = viewCy - center.cy * scale;
+  // Wunsch: Mittelpunkt des Pins genau ins Viewport‑Zentrum
+  let x = viewCx - c.cx * scale;
+  let y = viewCy - c.cy * scale;
 
-  // Nur clampen, wenn Karte größer ist als Viewport
   const mapW = MAP_W * scale;
   const mapH = MAP_H * scale;
 
+  // kleine Sicherheitskante gegen komplettes „Wegfliegen“
   const BLEED = 8;
 
-  if (mapW > rect.width) {
-    const minX = rect.width - mapW - BLEED;
-    const maxX = BLEED;
-    x = Math.min(maxX, Math.max(minX, x));
-  }
-  if (mapH > rect.height) {
-    const minY = rect.height - mapH - BLEED;
-    const maxY = BLEED;
-    y = Math.min(maxY, Math.max(minY, y));
-  }
+  // WICHTIG: beim Fokussieren mehr Spielraum erlauben:
+  // wir erweitern den erlaubten Pan‑Korridor um die halbe Viewport‑Breite/-Höhe.
+  const minX = (rect.width  - mapW - BLEED) - viewCx;   // mehr negativ zulassen
+  const maxX = (BLEED) + viewCx;                        // mehr positiv zulassen
+  const minY = (rect.height - mapH - BLEED) - viewCy;
+  const maxY = (BLEED) + viewCy;
+
+  // Nur clampen, wenn Karte größer als der Viewport ist (sonst gar kein Clamp nötig)
+  if (mapW > rect.width)  x = Math.min(maxX, Math.max(minX, x));
+  if (mapH > rect.height) y = Math.min(maxY, Math.max(minY, y));
 
   return { x, y, scale };
 }
+
 
 
 function fitAndCenter(xPercent = START_X_PERCENT) {
@@ -863,6 +864,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
