--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -352,7 +352,27 @@ function animTo(target, duration = 350) {
   }
   requestAnimationFrame(tick);
 }
-  
+
+ // === Klassischer Fokus ohne Clamping/Mitten-Zwang ===
+function focusPinClassic(id, scale = 2.5) {
+  if (!panzoomInstance) return;
+  const el = document.getElementById(`pin-${id}`);
+  if (!el) return;
+
+  // Pin-Mittelpunkt in Map-Koordinaten (untransformiert)
+  const cx = el.offsetLeft + el.offsetWidth  / 2;
+  const cy = el.offsetTop  + el.offsetHeight / 2;
+
+  // Ziel: Pin ungefähr ins Viewport-Zentrum holen
+  const wrapRect = wrapEl.getBoundingClientRect();
+  const x = wrapRect.width  / 2 - cx * scale;
+  const y = wrapRect.height / 2 - cy * scale;
+
+  animTo({ x, y, scale }, 400);     // sanft zoomen
+  highlightPin?.(id);
+  lastFocusId = id;
+}
+ 
 
 
   const MAP_W = 1920, MAP_H = 1080;
@@ -529,6 +549,26 @@ function debugFocus(id, scale){
   });
 }
   
+// === Klassischer Fokus ohne Clamping/Mitten-Zwang ===
+function focusPinClassic(id, scale = 2.5) {
+  if (!panzoomInstance) return;
+  const el = document.getElementById(`pin-${id}`);
+  if (!el) return;
+
+  // Pin-Mittelpunkt in Map-Koordinaten (untransformiert)
+  const cx = el.offsetLeft + el.offsetWidth  / 2;
+  const cy = el.offsetTop  + el.offsetHeight / 2;
+
+  // Ziel: Pin ungefähr ins Viewport-Zentrum holen
+  const wrapRect = wrapEl.getBoundingClientRect();
+  const x = wrapRect.width  / 2 - cx * scale;
+  const y = wrapRect.height / 2 - cy * scale;
+
+  animTo({ x, y, scale }, 400);
+  highlightPin?.(id);
+  lastFocusId = id;
+}
+
 function showMap(focusId = null) {
   // Tabs umschalten
   document.getElementById('tab-map').classList.add('active');
@@ -586,24 +626,19 @@ function showMap(focusId = null) {
     // 4) minScale nachziehen (falls showMap erneut aufgerufen wird)
     setOptsSafe({ minScale, animate: true });
 
-    // 5) Ziel bestimmen (leicht über Fit zoomen oder auf Pin fokussieren)
+    // 5) Ziel bestimmen (klassisch auf Pin zoomen oder Übersicht)
     const targetScale = Math.max(minScale, TARGET_SCALE);
-    const targetTf = id ? computeTransformForPin(id, targetScale)
-                        : { ...fit, scale: targetScale };
 
-    // 6) Anwenden (mit Fallback: Fit)
-    animTo(targetTf || fit, 350);
-
-    // 7) Status/Highlight aktualisieren
     if (id) {
-      lastFocusId = id;
-      if (typeof highlightPin === 'function') highlightPin(id);
-      console.log(`🔍 Focus ${id} → x:${Math.round((targetTf?.x ?? fit.x))} y:${Math.round((targetTf?.y ?? fit.y))} s:${(targetTf?.scale ?? fit.scale).toFixed(2)}`);
+      focusPinClassic(id, targetScale);
+      console.log(`[MAP] Fokus (klassisch) auf ${id}, scale=${targetScale}`);
     } else {
-      console.log('[MAP] kein spezifischer Fokus – auf angenehmen Überblick gezoomt.');
+      animTo({ ...fit, scale: targetScale }, 350);
+      console.log('[MAP] kein spezifischer Fokus – Übersicht');
     }
   }); // waitForImage
 }
+
 
   /* ====== LISTE & DATEN ====== */
 const categories = [
@@ -767,7 +802,8 @@ window.__mapTest = {
     });
     renderList(categories.flatMap(c=>c.areas));
   }
-function renderList(areaIds){
+
+  function renderList(areaIds){
   const list = document.getElementById('list'); 
   list.innerHTML = '';
 
@@ -777,7 +813,7 @@ function renderList(areaIds){
 
     const card = document.createElement('div'); 
     card.className = 'card';
-    if (id === lastFocusId) card.classList.add('selected'); // << neu
+    if (id === lastFocusId) card.classList.add('selected');
 
     const icon = document.createElement('img'); 
     icon.src = `icons/${id}Icon.png`; 
@@ -791,11 +827,40 @@ function renderList(areaIds){
     const txt = document.createElement('div'); txt.className = 'meta'; txt.innerHTML = data.text || '';
 
     const actions = document.createElement('div'); actions.className = 'actions';
-    const btn1 = document.createElement('button'); btn1.className = 'btn'; btn1.textContent = 'Details';
-    btn1.onclick = (e) => { e.stopPropagation(); lastFocusId = id; openSheet(id); }; // << gemerkt
 
-    const btn2 = document.createElement('button'); btn2.className = 'btn ghost'; btn2.textContent = 'Auf Karte zeigen';
-    btn2.onclick = (e) => { e.stopPropagation(); lastFocusId = id; showMap(id); }; // << neu: direkt mit ID
+    const btn1 = document.createElement('button'); 
+    btn1.className = 'btn'; 
+    btn1.textContent = 'Details';
+    btn1.onclick = (e) => { 
+      e.stopPropagation(); 
+      lastFocusId = id; 
+      openSheet(id); 
+    };
+
+    const btn2 = document.createElement('button'); 
+    btn2.className = 'btn ghost'; 
+    btn2.textContent = 'Auf Karte zeigen';
+    btn2.onclick = (e) => {
+      e.stopPropagation();
+      lastFocusId = id;
+      showMap(id);              // 👈 ID übergeben – showMap fokussiert klassisch
+      // kein focusPinClassic() hier!
+    };
+
+    actions.append(btn1, btn2);
+    body.append(h, meta, txt, actions);
+    card.append(icon, body);
+    list.appendChild(card);
+
+    // Karteintrag auswählen (visuelles Feedback)
+    card.addEventListener('click', () => {
+      lastFocusId = id;
+      document.querySelectorAll('.card.selected').forEach(el => el.classList.remove('selected'));
+      card.classList.add('selected');
+    });
+  });
+}
+
 
     actions.append(btn1, btn2);
     body.append(h, meta, txt, actions);
@@ -814,11 +879,11 @@ function renderList(areaIds){
 
   document.querySelectorAll('.pin').forEach(el => {
   el.addEventListener('click', () => {
-    const id = el.id.replace('pin-','');
-    lastFocusId = id;
-    highlightPin(id);
-    openSheet(id);
-  });
+  const id = el.id.replace('pin-','');
+  lastFocusId = id;
+  focusPinClassic(id);   // zoomt + setzt Highlight intern
+  openSheet(id);
+});
 });
 
 
@@ -1012,6 +1077,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
