--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -332,6 +332,25 @@ function applyTransform(tf, animate = true) {
   }
 }
 
+  function getPinCenterAccurate(id) {
+  const el = document.getElementById(`pin-${id}`);
+  if (!el || !wrapEl) return null;
+
+  const rect = el.getBoundingClientRect();
+  const wrap = wrapEl.getBoundingClientRect();
+  const tf = getTfSafe() || { x: 0, y: 0, scale: 1 };
+
+  // Screen-Koordinate relativ zum Wrapper:
+  const sx = (rect.left - wrap.left) + rect.width  / 2;
+  const sy = (rect.top  - wrap.top)  + rect.height / 2;
+
+  // Inverse des aktuellen Pan/Zoom:
+  const cx = (sx - tf.x) / tf.scale;
+  const cy = (sy - tf.y) / tf.scale;
+
+  return { cx, cy };
+}
+
 function animTo(target, duration = 350) {
   if (!panzoomInstance || !target) return;
 
@@ -368,17 +387,18 @@ function animTo(target, duration = 350) {
 }
 
 
-// === Klassischer Fokus auf Basis der 1920×1080-Koordinaten ===
 function focusPinClassic(id, scale = 2.5) {
   if (!panzoomInstance) return;
-  const c = getPinCenter(id);     // nutzt MAP_W/MAP_H + data-%
+
+  // Präzise ermitteln; falls (sehr früh) noch nicht möglich, auf Daten-Fallback gehen
+  const c = getPinCenterAccurate(id) || getPinCenter(id);
   if (!c) return;
 
   const rect = wrapEl.getBoundingClientRect();
   const x = rect.width  / 2 - c.cx * scale;
   const y = rect.height / 2 - c.cy * scale;
 
-  animTo({ x, y, scale }, 400);   // weiche Animation (mit Snap am Ende, s.u.)
+  animTo({ x, y, scale }, 400);
   highlightPin?.(id);
   lastFocusId = id;
 }
@@ -1077,6 +1097,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
